--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint quas eius dolor itaque ratione. Accusantium dolorem illo ullam, dolorum, maiores voluptates autem animi explicabo amet magnam ipsum! Impedit, eius dicta.
     </p>
+    <h2>Cambio hecho por sofi</h2>
 </body>
 </html>
